# crack-segmentation

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  demo.ipynb  inference.py  requirements.txt  setup.cfg  train.py
.github/: CONTRIBUTING.md
crackseg/models/: __init__.py  unet.py
crackseg/utils/: dataset.py  functional.py  general.py  losses.py
models/: __init__.py
tools/: inference.py  main.py
unet/models/: __init__.py
unet/utils/: dataset.py  losses.py
utils/: dataset.py  general.py
