[metadata]
name = unet-pytorch
version = 0.0.1
author = Yakhyokhuja Valikhujaev
author_email = yakhyo9696@gmail.com
description = Semantic Segmentation using UNet
readme = README.md
python_requires = >=3.8.0
license_file = LICENSE

[bdist_wheel]
universal=1

[pep8]
max-line-length = 120


[flake8]
# note: we ignore all 501s (line too long) anyway as they're taken care of by black
max-line-length = 120
per-file-ignores =
    __init__.py: F401, F403, F405
exclude = docs*

[pydocstyle]
select = D417 # Missing argument descriptions in the docstring
